@@ -5,32 +5,35 @@ import com.higgs.common.kafka.KafkaTopicEnum;
 import com.higgs.common.kafka.ServerProducer;
 import com.higgs.server.db.entity.Action;
 import com.higgs.server.db.entity.ActionHandler;
-import com.higgs.server.db.repo.NodeRepository;
+import com.higgs.server.db.entity.Node;
 import com.higgs.server.web.dto.ActionRequest;
 import com.higgs.server.web.rest.util.RestUtils;
+import com.higgs.server.web.svc.NodeService;
 import lombok.AllArgsConstructor;
 import lombok.NonNull;
 import lombok.SneakyThrows;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.lang3.StringUtils;
 import org.springframework.messaging.handler.annotation.MessageMapping;
+import org.springframework.security.access.AccessDeniedException;
 import org.springframework.stereotype.Controller;
 
 import java.security.Principal;
+import java.util.Collection;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Optional;
+import java.util.stream.Stream;
 
-/**
- * todo: figure out what the commented code was meant to do
- */
 @Slf4j
 @Controller
 @AllArgsConstructor
 public class NodeSocket {
+    private final NodeService nodeService;
+    private final RestUtils restUtils;
     private final ServerProducer producer;
-//    private final RestUtils restUtils;
-//    private final NodeRepository nodeRepository;
 
     @SneakyThrows
     @MessageMapping("/nodeaction")
@@ -39,7 +42,7 @@ public class NodeSocket {
             throw new IllegalArgumentException("action not specified on request");
         }
         // ensure that the authentication principal provided has authorization to both relevant nodes
-//        this.validatePrincipalForNodes(principal, Stream.of(actionRequest.getFromNodeSeq(), actionRequest.getFromNodeSeq()).filter(Objects::nonNull).collect(Collectors.toList()));
+        this.validatePrincipalForNodes(principal, Stream.of(actionRequest.getToNodeSeq(), actionRequest.getFromNodeSeq()).filter(Objects::nonNull).toList());
         this.producer.send(KafkaTopicEnum.NODE_ACTION, actionRequest, this.buildHeaderMap(actionRequest));
     }
 
@@ -53,13 +56,13 @@ public class NodeSocket {
         return headerMap;
     }
 
-//    private void validatePrincipalForNodes(final Principal principal, final List<Long> nodeSeqs) {
-//        final Long accountSeq = this.restUtils.getHomeSeqs(principal);
-//        final List<Long> ownedNodeSeqs = this.nodeRepository.getByRoomHomeHomeSeq(accountSeq).stream()
-//                .map(Node::getNodeSeq)
-//                .collect(Collectors.toList());
-//        if (!ownedNodeSeqs.containsAll(nodeSeqs)) {
-//            throw new AccessDeniedException(String.format("principal \"%s\" does not have access to one or more nodes: %s", principal.getName(), nodeSeqs));
-//        }
-//    }
+    void validatePrincipalForNodes(final Principal principal, final List<Long> nodeSeqs) {
+        final Collection<Long> homeSeqs = this.restUtils.getHomeSeqs(principal);
+        final List<Long> ownedNodeSeqs = this.nodeService.getNodesForHomeSeqs(homeSeqs).stream()
+                .map(Node::getNodeSeq)
+                .toList();
+        if (!ownedNodeSeqs.containsAll(nodeSeqs)) {
+            throw new AccessDeniedException(String.format("principal \"%s\" does not have access to one or more nodes: %s", principal.getName(), nodeSeqs));
+        }
+    }
 }
